# kbest-assignment-enumeration-python

./: .gitignore  .gitmodules  .pylintrc  Cargo.toml  requirements.ci.txt  requirements.txt  setup.py
.github/: ci.yml
.github/workflows/: ci.yml
kbest_lap/: __init__.py  _wrapper.py
src/: lib.rs
tests/: naive.py  test_basic.py  test_enumerate.py
