[package]
name = "kbest-lap-python"
version = "0.1.0"
authors = ["Jaeseung Han <thestudentofkyoto@gmail.com>"]
edition = "2018"

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.3"
num-complex = "0.4.0"
numpy = { git = "https://github.com/PyO3/rust-numpy", branch = "main" }
ndarray-linalg = { git = "https://github.com/rust-ndarray/ndarray-linalg", features = ["openblas-static"] }

[dependencies.kbest-lap]
git = "https://github.com/studentofkyoto/kbest-assignment-enumeration-rust"
tag = "v0.1.1"

[dependencies.all-lap-rust]
git = "https://github.com/studentofkyoto/all-lap-rust"
tag = "v0.1.1"

[dependencies.pyo3]
version = "0.14.0"
features = ["extension-module"]
